force-app/main/default/objects/Trigger_Action_Configuration__c/Trigger_Action_Configuration__c.object-meta.xml
<CustomObject>
    <description>Defines what actions can be run within various trigger contexts.</description>
    <label>Trigger Action Configuration</label>
    <nameField>
        <label>Trigger Action Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trigger Action Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>