force-app/main/default/objects/Trigger_Action_Configuration__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>The API name of the class that contains logic to be executed within the target trigger.</description>
    <inlineHelpText>The API name of the class that contains logic to be executed within the target trigger.</inlineHelpText>
    <label>Class Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>