force-app/main/default/objects/Trigger_Action_Configuration__c/fields/Execute_Before_Update_Action__c.field-meta.xml
<CustomField>
    <fullName>Execute_Before_Update_Action__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, the logic of the implemented IBeforeUpdateAction interface will be executed.</description>
    <inlineHelpText>When checked, the logic of the implemented IBeforeUpdateAction interface will be executed.</inlineHelpText>
    <label>Execute Before Update Action</label>
    <type>Checkbox</type>
</CustomField>