force-app/main/default/objects/Trigger_Action_Configuration__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the configuration to executed for its target trigger.</description>
    <inlineHelpText>Enables the configuration to executed for its target trigger.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>