force-app/main/default/objects/Trigger_Action_Configuration__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Determines the order in which the configuration will be executed compared to other configurations. A lower number indicates a higher priority.</description>
    <inlineHelpText>Determines the order in which the configuration will be executed compared to other configurations. A lower number indicates a higher priority.</inlineHelpText>
    <label>Priority</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>