force-app/main/default/objects/Trigger_Action_Configuration__c/fields/Target_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Target_Trigger__c</fullName>
    <description>The configuration will be executed for the specified API name of the target trigger.</description>
    <inlineHelpText>The configuration will be executed for the specified API name of the target trigger.</inlineHelpText>
    <label>Target Trigger</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>